# Voxpire-old-project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy_workflow.yml
assets/config/: default_bindings.ron
assets/prefab/: test.ron
assets/ui/: home.ron
config/: display.ron
src/: main.rs
src/components/ui/: time.rs
src/config/: bindings_config.rs  display_config.rs  logging_config.rs  mod.rs  user_config.rs
src/data_objects/: board.rs
src/engines/: mod.rs
src/engines/blocs/: bloc_type.rs  mod.rs
src/engines/debug/: debug_system.rs  mod.rs
src/engines/terrain/: bloc.rs  chunk.rs  data_model.rs  mod.rs  square.rs
src/engines/time/: mod.rs  time_system.rs
src/entities/: main_state.rs  mod.rs
src/resources/ui/: time.rs
src/states/: main_menu_state.rs  main_state.rs  mod.rs  poc_state.rs
src/systems/: config_system.rs  debug_system.rs  mod.rs  ui_systems.rs
src/systems/ui/: mod.rs  time_system.rs
src/ui/: mod.rs
src/ui/time/: time_system.rs
src/utilities/: data_access.rs  geometry.rs  mod.rs  traits.rs
src/utilities/developer/: developer_console.rs  developer_console_utils.rs  mod.rs
src/utilities/geometry/: coordinates.rs  meshdata_helper.rs  mod.rs
src/utilities/ui/: ui_helper.rs
