[package]
name = "rumple-s-adventures"
version = "0.0.1"
authors = ["grzi <jeremy.thulliez@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.3"
amethyst-developer-console = { git = "https://github.com/Voxpire/amethyst-developer-console" }
# Logging
fern = "0.6.0"
log = "0.4.11"
# Data access
ron = "0.6.2"
serde = "1.0.116"
# Math
rand = "0.7.3"


[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

